src/objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>Billing Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Closed - First Call</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>General Inquiry</fullName>
        <description>Basic Support Process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Closed - First Call</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Technical Issue</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Closed - First Call</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>CaseStatus__c</fullName>
        <description>Status of the Case</description>
        <label>CaseStatus</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>CaseFlow</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>DB_Case_Duration_Hours__c</fullName>
        <label>DB Case Duration Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DB_Hours__c</fullName>
        <description>This is used for the &quot;Perfect Data&quot; SE tool</description>
        <label>DB Hours</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DateTime_Closed_c__c</fullName>
        <label>DateTime Closed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DateTime_Opened_c__c</fullName>
        <label>DateTime Opened</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <formula>8*(IF( ISNULL( DateTime_Closed_c__c ), NOW() - DateTime_Opened_c__c , DateTime_Closed_c__c - DateTime_Opened_c__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duration (hrs)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>External_Comments__c</fullName>
        <description>Client Facing Comments</description>
        <label>External Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FinServ__FinancialAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Financial Account</label>
        <referenceTo>FinServ__FinancialAccount__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Indicator__c</fullName>
        <formula>IMAGE(CASE(Status, 
&quot;New&quot;, &quot;/resource/Case_Indicator/Status-New.png&quot;, 
&quot;Escalated&quot;, &quot;/resource/Case_Indicator/Status-Escalated.png&quot;, 
&quot;On Hold&quot;, &quot;/resource/Case_Indicator/Status-Researching.png&quot;, 
&quot;Closed&quot;, &quot;/resource/Case_Indicator/Status-Closed.png&quot;, 
&quot;/resource/Case_Indicator/Status-Responded.png&quot;),&quot;&quot;,18,18)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Payment__c</fullName>
        <label>Last Payment</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payment_Billing__c</fullName>
        <label>Payment Billing</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Semi-Annually</fullName>
                </value>
                <value>
                    <fullName>Annually</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <formula>IMAGE(CASE(Origin,
&quot;Chatter Answers&quot;, &quot;/resource/Case_Source/chatter_answers_logo.png&quot;, 
&quot;Email&quot;, &quot;/resource/Case_Source/email_icon.png&quot;, 
&quot;Phone&quot;, &quot;/resource/Case_Source/phone_icon.png&quot;, 
&quot;Facebook&quot;, &quot;/resource/Case_Source/facebook_icon.png&quot;, 
&quot;Twitter&quot;, &quot;/resource/Case_Source/twitter_icon.png&quot;, 
&quot;Website&quot;, &quot;/resource/Case_Source/website_icon.png&quot;, 
&quot;Google&quot;, &quot;/resource/Case_Source/google.gif&quot;, 
&quot;Chat&quot;, &quot;/resource/Case_Source/chat_icon.png&quot;, 
&quot;Portal&quot;, &quot;/resource/Case_Source/website_icon.png&quot;, 
&quot;/resource/Case_Source/website_icon.png&quot;),&quot;&quot;,18,18)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Source</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>external_id__c</fullName>
        <description>used for datapacks</description>
        <label>external id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>Indicator__c</columns>
        <columns>Source__c</columns>
        <columns>OWNER_NAME</columns>
        <columns>CASES.ORIGIN</columns>
        <columns>CASES.PRIORITY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Open Cases</label>
    </listViews>
    <listViews>
        <fullName>MyCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <filterScope>Mine</filterScope>
        <label>My Cases</label>
    </listViews>
    <listViews>
        <fullName>MyOpenCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>Indicator__c</columns>
        <columns>Source__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Open Cases</label>
    </listViews>
    <listViews>
        <fullName>Tier_1_Queue</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>Source__c</columns>
        <filterScope>Queue</filterScope>
        <label>Tier 1 Queue</label>
        <queue>Tier_1_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Tier_2_Queue</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>Source__c</columns>
        <filterScope>Queue</filterScope>
        <label>Tier 2 Queue</label>
        <queue>Tier_2_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Tier_3_Queue</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>Source__c</columns>
        <filterScope>Queue</filterScope>
        <label>Tier 3 Queue</label>
        <queue>Tier_3_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>Billing_Inquiry</fullName>
        <active>true</active>
        <businessProcess>Billing Process</businessProcess>
        <description>Customer billing questions.</description>
        <label>Billing Inquiry</label>
    </recordTypes>
    <recordTypes>
        <fullName>General_Inquiry</fullName>
        <active>true</active>
        <businessProcess>General Inquiry</businessProcess>
        <description>General customer questions and inquiry</description>
        <label>General Inquiry</label>
    </recordTypes>
    <recordTypes>
        <fullName>Technical_Issue</fullName>
        <active>true</active>
        <businessProcess>Technical Issue</businessProcess>
        <description>Technical investigations and troubleshooting</description>
        <label>Technical Issue</label>
    </recordTypes>
    <sharingModel>ReadWriteTransfer</sharingModel>
</CustomObject>